[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Main/hud.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Main/NoAmmo.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "outOfAmmo"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -181.388, 22.357 ), Vector2( 463, 293 ), Vector2( 463, 293 ), Vector2( 1063, 486.316 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, 0.0 ]
}

[node name="hud" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 0.307358
margin_top = -14.6147
margin_right = 51.3074
margin_bottom = -0.614746
custom_colors/font_color = Color( 0.964706, 0.521569, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Score:"

[node name="Score" type="Label" parent="ScoreLabel"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 44.0
margin_top = -14.0
margin_right = 121.0
custom_colors/font_color = Color( 0.964706, 0.521569, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0"

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -132.5
margin_top = -85.0
margin_right = 132.5
margin_bottom = -37.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.576471, 0.584314, 0.533333, 1 )
text = "Los mayas estan atacandote! 
Otra vez! Pero ustedes son los mejores, verdad?
Unite a tu hermano, el capitan San pedro!"

[node name="Start" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.5
margin_top = -10.0
margin_right = 20.5
margin_bottom = 10.0
text = "Start"

[node name="AmmunitionLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -70.3287
margin_top = -39.2424
margin_right = -3.32874
margin_bottom = -25.2424
custom_colors/font_color = Color( 0.964706, 0.521569, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Tower:"

[node name="Label" type="Label" parent="AmmunitionLabel"]
margin_left = 44.0
margin_right = 65.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.964706, 0.521569, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "5/5"

[node name="HeartLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -55.0
margin_top = -19.0
margin_right = -5.0
margin_bottom = -5.0
custom_colors/font_color = Color( 0.964706, 0.521569, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Life: "
valign = 2

[node name="Label" type="Label" parent="HeartLabel"]
margin_left = 29.0
margin_right = 54.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.964706, 0.521569, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "3/3"

[node name="GameOver" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -138.557
margin_top = -93.6927
margin_right = 143.443
margin_bottom = -62.6927
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.576471, 0.584314, 0.533333, 1 )
text = "Han perdido!
Los mayas los mataron y destruiron la torre!"

[node name="Score" type="Label" parent="GameOver"]
margin_left = 118.294
margin_top = 46.8713
margin_right = 158.294
margin_bottom = 60.8713
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.576471, 0.584314, 0.533333, 1 )
text = "158"
align = 1

[node name="NoAmmo" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 552.135
margin_top = 186.316
margin_right = 650.135
margin_bottom = 200.316
custom_colors/font_color = Color( 0.823529, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "OUT OF AMMO"
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="NoAmmo"]
playback_speed = 0.5
anims/outOfAmmo = SubResource( 1 )

[node name="Timer" type="Timer" parent="NoAmmo"]
wait_time = 3.0
one_shot = true

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="timeout" from="NoAmmo/Timer" to="NoAmmo" method="_on_Timer_timeout"]
